--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"babel-loader": "^8.2.1",
 		"copy-webpack-plugin": "^6.3.2",
 		"css-loader": "^5.0.1",
+		"dotenv-webpack": "^6.0.0",
 		"eslint": "^7.14.0",
 		"eslint-plugin-react": "^7.21.5",
 		"html-loader": "^1.3.2",
@@ -31,6 +32,7 @@
 		"style-loader": "^2.0.0",
 		"webpack": "^4.44.2",
 		"webpack-cli": "^3.3.12",
-		"webpack-dev-server": "^3.11.0"
+		"webpack-dev-server": "^3.11.0",
+		"webpack-merge": "^5.4.0"
 	}
 }
