--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@babel/core": "^7.12.8",
 		"@babel/preset-env": "^7.12.7",
 		"@babel/preset-react": "^7.12.7",
+		"@svgr/webpack": "^5.5.0",
 		"babel-eslint": "^10.1.0",
 		"babel-loader": "^8.2.1",
 		"copy-webpack-plugin": "^6.3.2",
@@ -22,6 +23,7 @@
 		"dotenv-webpack": "^6.0.0",
 		"eslint": "^7.14.0",
 		"eslint-plugin-react": "^7.21.5",
+		"file-loader": "^6.2.0",
 		"html-loader": "^1.3.2",
 		"html-webpack-plugin": "^4.5.0",
 		"mini-css-extract-plugin": "^1.3.1",
@@ -29,6 +31,7 @@
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"sass-loader": "^10.1.0",
+		"source-map-loader": "^3.0.0",
 		"style-loader": "^2.0.0",
 		"webpack": "^4.44.2",
 		"webpack-cli": "^3.3.12",
