--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"scripts": {
 		"start": "NODE_ENV='development' webpack-dev-server --open --mode development",
 		"build": "yarn lint && rm -rf dist && NODE_ENV='production' webpack --mode production --progress",
-		"lint": "eslint src/**/*.jsx",
+		"lint": "eslint src/**/*.tsx",
 		"dev": "yarn lint && yarn start"
 	},
 	"devDependencies": {
@@ -16,12 +16,20 @@
 		"@babel/preset-env": "^7.12.7",
 		"@babel/preset-react": "^7.12.7",
 		"@svgr/webpack": "^5.5.0",
+		"@types/node-sass": "^4.11.2",
+		"@types/react": "^17.0.14",
+		"@types/react-dom": "^17.0.9",
+		"@types/webpack-env": "^1.16.2",
+		"@typescript-eslint/eslint-plugin": "^4.28.4",
+		"@typescript-eslint/parser": "^4.28.4",
 		"babel-eslint": "^10.1.0",
 		"babel-loader": "^8.2.1",
 		"copy-webpack-plugin": "^6.3.2",
 		"css-loader": "^5.0.1",
+		"css-modules-typescript-loader": "^4.0.1",
 		"dotenv-webpack": "^6.0.0",
-		"eslint": "^7.14.0",
+		"eslint": "^7.31.0",
+		"eslint-loader": "^4.0.2",
 		"eslint-plugin-react": "^7.21.5",
 		"file-loader": "^6.2.0",
 		"html-loader": "^1.3.2",
@@ -33,6 +41,8 @@
 		"sass-loader": "^10.1.0",
 		"source-map-loader": "^3.0.0",
 		"style-loader": "^2.0.0",
+		"ts-loader": "8.3.0",
+		"typescript": "^4.3.5",
 		"webpack": "^4.44.2",
 		"webpack-cli": "^3.3.12",
 		"webpack-dev-server": "^3.11.0",
