change project src structure
* fix typescript parser
* fix tsconfig options
* add jest package

Signed-off-by: chankruze <chankruze@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
 		"jsx": "react",
 		"moduleResolution": "node"
 	},
-	"include": ["**/*"],
+	"include": ["src/*"],
 	"exclude": ["node_modules", "**/*.spec.ts"],
 	"awesomeTypescriptLoaderOptions": {
 		"useWebpackText": true,
