--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@babel/preset-env": "^7.12.7",
 		"@babel/preset-react": "^7.12.7",
 		"@svgr/webpack": "^5.5.0",
+		"@types/jest": "^27.0.2",
 		"@types/node-sass": "^4.11.2",
 		"@types/react": "^17.0.14",
 		"@types/react-dom": "^17.0.9",
@@ -24,20 +25,24 @@
 		"@types/webpack-env": "^1.16.2",
 		"@typescript-eslint/eslint-plugin": "^4.28.4",
 		"@typescript-eslint/parser": "^4.28.4",
-		"babel-eslint": "^10.1.0",
 		"babel-loader": "^8.2.1",
 		"copy-webpack-plugin": "^6.3.2",
 		"css-loader": "^5.0.1",
 		"css-modules-typescript-loader": "^4.0.1",
 		"dotenv-webpack": "^6.0.0",
 		"eslint": "^7.31.0",
+		"eslint-config-prettier": "^8.3.0",
 		"eslint-loader": "^4.0.2",
+		"eslint-plugin-import": "^2.24.2",
+		"eslint-plugin-jest": "^24.4.2",
 		"eslint-plugin-react": "^7.21.5",
 		"file-loader": "^6.2.0",
 		"html-loader": "^1.3.2",
 		"html-webpack-plugin": "^4.5.0",
+		"jest": "^27.2.2",
 		"mini-css-extract-plugin": "^1.3.1",
 		"node-sass": "^5.0.0",
+		"prettier": "^2.4.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"sass-loader": "^10.1.0",
