Fix SVG Imports
* Add support for importing svg as both file and react component
* Add sample example

Signed-off-by: chankruze <chankruze@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
 	"compilerOptions": {
 		"target": "es5",
-		"lib": ["DOM", "DOM.Iterable", "ESNext"],
+		"lib": [
+			"DOM",
+			"DOM.Iterable",
+			"ESNext"
+		],
 		"allowJs": true,
 		"module": "commonjs",
 		"strict": true,
@@ -16,8 +20,13 @@
 		"jsx": "react",
 		"moduleResolution": "node"
 	},
-	"include": ["src/*"],
-	"exclude": ["node_modules", "**/*.spec.ts"],
+	"include": [
+		"src/*"
+	],
+	"exclude": [
+		"node_modules",
+		"**/*.spec.ts"
+	],
 	"awesomeTypescriptLoaderOptions": {
 		"useWebpackText": true,
 		"useTranspileModule": true,
